test/error/MethodBaseNotMethod.fu
public class Base
{
	internal int Bar;
}

public class Test : Base
{
	bool Foo() => base.Bar(); //ERROR: Expected a method

	public static bool Run() => true;
}
